Fixed Spacing for smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ footer {
 
     .landing-grid {
         grid-template-columns: 2fr 3fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 2fr 1fr;
     }
 
     .landing-grid-subtitle {
